--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev --turbopack -p 3001",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:setup": "tsx setup-db.ts",
+    "db:seed": "tsx src/seeders/index.ts"
   },
   "dependencies": {
     "@types/react-datepicker": "^6.2.0",
+    "dotenv": "^17.2.3",
+    "mysql2": "^3.15.3",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
@@ -24,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
