--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@types/react-datepicker": "^6.2.0",
     "dotenv": "^17.2.3",
     "mysql2": "^3.15.3",
-    "next": "15.5.4",
-    "react": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
     "react-datepicker": "^8.7.0",
-    "react-dom": "19.1.0"
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "typescript": "^5"
